Project

General

Profile

Actions

Bug #38416

closed

crc cache should be invalidated when posting preallocated rx buffers

Added by Ilya Dryomov about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Otherwise, if the buffer was previously checksummed, the client will spin on "bad crc in data" errors forever.


Related issues 5 (0 open5 closed)

Has duplicate RADOS - Bug #40765: mimic: "Command failed (workunit test rados/test.sh)" in smoke/master/mimicDuplicateBrad Hubbard07/12/2019

Actions
Has duplicate RADOS - Bug #38238: rados/test.sh: api_aio_pp doesn't seem to startDuplicateBrad Hubbard02/08/2019

Actions
Has duplicate RADOS - Bug #38433: rados/test.sh timeoutDuplicate02/22/2019

Actions
Copied to RADOS - Backport #38436: luminous: crc cache should be invalidated when posting preallocated rx buffersResolvedNathan CutlerActions
Copied to RADOS - Backport #38437: mimic: crc cache should be invalidated when posting preallocated rx buffersResolvedNathan CutlerActions
Actions #1

Updated by Ilya Dryomov about 5 years ago

  • Backport set to luminous,mimic
Actions #2

Updated by Ilya Dryomov about 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38436: luminous: crc cache should be invalidated when posting preallocated rx buffers added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38437: mimic: crc cache should be invalidated when posting preallocated rx buffers added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Pull request ID set to 26552
Actions #7

Updated by Brad Hubbard over 4 years ago

  • Has duplicate Bug #40765: mimic: "Command failed (workunit test rados/test.sh)" in smoke/master/mimic added
Actions #8

Updated by Neha Ojha over 4 years ago

  • Priority changed from Normal to Urgent

This is causing lots of failures in luminous/mimic, marking it urgent to get the backports expedited.

Actions #9

Updated by Brad Hubbard over 4 years ago

  • Has duplicate Bug #38238: rados/test.sh: api_aio_pp doesn't seem to start added
Actions #10

Updated by Brad Hubbard over 4 years ago

  • Related to Bug #38433: rados/test.sh timeout added
Actions #11

Updated by Brad Hubbard over 4 years ago

  • Related to deleted (Bug #38433: rados/test.sh timeout)
Actions #12

Updated by Brad Hubbard over 4 years ago

  • Has duplicate Bug #38433: rados/test.sh timeout added
Actions #13

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved".

Actions

Also available in: Atom PDF